basic koin setup for hello world

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -7,6 +7,7 @@
     tools:context=".HomeScreenActivity">
 
     <TextView
+        android:id="@+id/tv_homescreen_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
